--- a/app/src/main/res/layout/fragment_play_list.xml
+++ b/app/src/main/res/layout/fragment_play_list.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_playlist"
     android:orientation="vertical"
     tools:context=".ui.meditations.PlayListFragment">
 
@@ -36,5 +38,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:orientation="vertical"
+        android:overScrollMode="never"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_audio_track" />
 </androidx.appcompat.widget.LinearLayoutCompat>
