--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -78,6 +78,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
+                    android:gravity="center_vertical"
                     android:text="@string/background_music"
                     android:textColor="@color/blueColor"
                     android:textSize="10sp"
@@ -91,8 +92,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginBottom="8dp"
+                    android:gravity="center_vertical"
                     android:textColor="@color/blueColor"
                     android:textSize="10sp"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/backgroundMusicIcon"
                     app:layout_constraintTop_toBottomOf="@id/bgTitle"
@@ -124,6 +127,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
+                    android:gravity="center_vertical"
                     android:text="@string/speaker_voice"
                     android:textColor="@color/blueColor"
                     android:textSize="10sp"
@@ -137,8 +141,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginBottom="8dp"
+                    android:gravity="center_vertical"
                     android:textColor="@color/blueColor"
                     android:textSize="10sp"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/speakerVoiceIcon"
                     app:layout_constraintTop_toBottomOf="@id/speakerTitle"
